--- a/views/layouts/layout1.hbs
+++ b/views/layouts/layout1.hbs
@@ -34,6 +34,25 @@
             {{/each}}
           </ul>
         </li>
+        <li class="nav-item dropdown">
+              <a href="#" id="menu" 
+                  data-toggle="dropdown" class="nav-link dropdown-toggle"
+                  data-display="static">Field</a>
+              <ul class="dropdown-menu">
+                {{#each lcFields}}
+                  <li class="dropdown-item dropdown-submenu">
+                      <a href="#" data-toggle="dropdown" class="dropdown-toggle">{{fieldName}}</a>
+                      <ul class="dropdown-menu">
+                        {{#each lcCategories}}
+                          <li class="dropdown-item">
+                              <a href="#">{{catName}}</a>
+                          </li>
+                        {{/each}}
+                      </ul>
+                  </li>
+                {{/each}}
+              </ul>
+            </li>
     </div>
   </nav>
   
@@ -41,6 +60,19 @@
 
   
   <!-- JavaScript Bundle with Popper -->
+  <script>
+    $('.dropdown-submenu > a').on("click", function(e) {
+      var submenu = $(this);
+      $('.dropdown-submenu .dropdown-menu').removeClass('show');
+      submenu.next('.dropdown-menu').addClass('show');
+      e.stopPropagation();
+    });
+
+    $('.dropdown').on("hidden.bs.dropdown", function() {
+        // hide any open menus when parent closes
+        $('.dropdown-menu.show').removeClass('show');
+    });
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
