--- a/views/layouts/layout1.hbs
+++ b/views/layouts/layout1.hbs
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a href="#" id="menu" 
@@ -34,7 +34,7 @@
                   <ul class="dropdown-menu">
                     {{#each lcCategories}}
                       <li>
-                          <a class="dropdown-item" href="#">{{catName}}</a>
+                          <a class="dropdown-item" href="/course/category/{{catID}}">{{catName}}</a>
                       </li>
                     {{/each}}
                   </ul>
