Update view admin/fields, route and service

--- a/views/vwAdmin/byField.hbs
+++ b/views/vwAdmin/byField.hbs
@@ -1,9 +1,9 @@
 <div class="card">
     <h4 class="card-header d-flex justify-content-between">
         Fields
-        <a class="btn btn-sm btn-outline-primary" href="/categories/add" role="button">
+        <a class="btn btn-sm btn-outline-primary" href="/fields/add" role="button">
             <i class="fa fa-plus" aria-hidden="true"></i>
-            Add Category
+            Add Field
         </a>
     </h4>
     {{#if this.empty}}
