--- a/views/vwAdmin/vwField/edit.hbs
+++ b/views/vwAdmin/vwField/edit.hbs
@@ -1,7 +1,7 @@
 <form method="post">
   <div class="card">
     <h4 class="card-header">
-      Edit Category
+      Edit Field
     </h4>
     <div class="card-body">
       <div class="form-group">
