--- a/views/layouts/layout1.hbs
+++ b/views/layouts/layout1.hbs
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
-  <title>Online Academy</title>
+  <title>{{lcTitle}}</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <li class="nav-item dropdown">
           <a href="#" id="menu" 
               data-toggle="dropdown" class="nav-link" 
-              >Field</a>
+              >Categories</a>
           <ul class="dropdown-menu">
             {{#each lcFields}}
               <li class="dropdown-submenu">
