--- a/views/vwUser/courses.hbs
+++ b/views/vwUser/courses.hbs
@@ -2,9 +2,9 @@
 
 <div class="card">
   <p class="card-header d-flex aPath">
-    <a href="javascript:;">{{fieldName}}</a>
-    <span>&nbsp;❯&nbsp;</span>
-    <a href="javascript:;">{{catName}}</a>
+    <a class="aPath" href="javascript:;">{{fieldName}}</a>
+    <span>&nbsp;&nbsp;❯&nbsp;&nbsp;</span>
+    <a class="aPath" href="javascript:;">{{catName}}</a>
   </p>
 
   <div class="card-body">
@@ -17,15 +17,13 @@
           <div class="col-sm-3 mb-3" type="button">
             <a class="course-card-a" href="/course/detail?catID={{catID}}&id={{courseID}}">
             <div class="course-card">
-                <img class= "course-card-img" src="/imgs/course1.jpeg" alt="">
+                <img class= "course-card-img" src="https://drive.google.com/uc?export=view&id={{image}}" alt="">
                 <h5 class="course-card-title">{{title}}</h5>
                 <p class="course-card-instructor">{{instructor}}</p>
                 <span class="rating">{{rating}}</span>
-                <span class="fa fa-star star-checked"></span>
-                <span class="fa fa-star star-checked"></span>
-                <span class="fa fa-star star-checked"></span>
-                <span class="fa fa-star star-checked"></span>
-                <span class="fa fa-star"></span>
+                {{#each star}}
+                <span class="fa fa-star {{#if this}}star-checked{{/if}}"></span>
+                {{/each}}
                 <span>&nbsp;({{format_number rating_num}})</span>
                 <p class="price">₫{{format_number price}}</p>
             </div>
