--- a/views/layouts/simple.hbs
+++ b/views/layouts/simple.hbs
@@ -89,26 +89,9 @@
         </ul>
     </div>
 </nav>
-<div class="container-fluid mt-4">
-    <div class="row">
-        <div class="col-sm-3">
-
-            <div class="card">
-                <h4 class="card-header">
-                    Featured
-                </h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-sm-9">
+    <div class="col-lg-auto align-self-center">
             {{{body}}}
-        </div>
     </div>
-</div>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
