--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,7 +28,6 @@
 
 .dropdown:hover>.dropdown-menu {
     display: block;
-    margin-top: -5px;
 }
 
 .dropdown-submenu>a:after {
@@ -65,92 +64,6 @@
     color: rgb(4, 0, 255);
     background-color: white;
 }
-
-.aPath, .aPath:hover {
-    font-weight: bold;
-    text-decoration: none;
-    color:black;
-}
-
-.course-card {
-    background-color: #fff;
-	border:none;
-	border-radius: 10px;
-    height: 320px;
-	width: 300px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-.course-card:hover {
-    transition-duration: 500ms;
-    transform: scale(1.01,1.01)
-}
-
-.course-card:hover>.course-card-img {
-    opacity: 0.8;
-}
-
-.course-card-title {
-    margin-bottom: -1px;
-}
-
-.course-card-img {
-    width: 100%;
-    height: 150px;
-    margin-bottom: 5px;
-}
-
-.course-card-a {
-    color: black;
-}
-
-.course-card-a:hover {
-    text-decoration: none;
-    color: black;
-}
-
-.course-card-instructor {
-    color:rgb(160, 164, 147);
-    margin-bottom: -1px;
-}
-
-.star-checked {
-    color: orange;
-}
-
-.rating {
-    font-weight: bold;
-    color: orange;
-}
-
-.price {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: -1px;
-}
-
-.row {
-    margin: 0 50px;
-}
-
-.course-card-body {
-    padding: 5px;
-}
-
-.course-rating-num {
-    color: purple;
-    text-decoration: underline;
-}
-.course-instructor {
-    color: purple;
-    text-decoration: underline;
-}
-
-.course-img {
-    width: 40%;
-    float: left;
-    margin-right: 20px;
-    border: 1px solid;
+body{
+    height: 100%;
 }
