--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,6 +28,7 @@
 
 .dropdown:hover>.dropdown-menu {
     display: block;
+    margin-top: -10px;
 }
 
 .dropdown-submenu>a:after {
@@ -66,4 +67,152 @@
 }
 body{
     height: 100%;
+}
+
+.aPath, .aPath:hover {
+    font-weight: bold;
+    text-decoration: none;
+    color:black;
+}
+
+.course-card {
+    background-color: #fff;
+	border:none;
+	border-radius: 10px;
+    height: 350px;
+	width: 300px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.course-card:hover {
+    transition-duration: 500ms;
+    transform: scale(1.01,1.01)
+}
+
+.course-card:hover>.course-card-img {
+    opacity: 0.8;
+}
+
+.course-card-title {
+    margin-bottom: -1px;
+}
+
+.course-card-img {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 5px;
+}
+
+.course-card-a {
+    color: black;
+}
+
+.course-card-a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+.course-card-instructor {
+    color:rgb(160, 164, 147);
+    margin-bottom: -1px;
+}
+
+.star-checked {
+    color: orange;
+}
+
+.rating {
+    font-weight: bold;
+    color: orange;
+}
+
+.price {
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: -1px;
+}
+
+.old-price {
+    text-decoration: line-through;
+    margin-bottom: -1px;
+}
+
+.row {
+    margin: 0 50px;
+}
+
+.course-card-body {
+    padding: 5px;
+}
+
+.course-rating-num {
+    color: purple;
+    text-decoration: underline;
+}
+.course-instructor {
+    color: purple;
+    text-decoration: underline;
+}
+
+.course-img {
+    width: 40%;
+    float: left;
+    margin-right: 10px;
+    border: 1px solid;
+}
+
+.course-title {
+    float: right;
+    width: 59%;
+}
+
+.course-title-info {
+    width: 50%;
+    float: left;
+}
+
+.course-title-price {
+    width: 50%;
+    float: right;
+}
+
+.price-box {
+    background-color: purple;
+	border:none;
+	border-radius: 10px;
+	width: 200px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.buy-now {
+    margin: 20px auto 10px;
+    border: 1px solid;
+    width: 200px;
+    padding: 10px;
+}
+
+.buy-now:hover {
+    background-color:silver;
+}
+
+.course-title-price-card {
+    position: absolute;
+    right: 100px;
+    bottom: 5px;
+}
+
+.main-des {
+    width: 60%;
+    margin: 0 auto;
+    border: 0.5px solid;
+    padding: 30px;
+}
+
+.course-content {
+    width: 60%;
+    margin: 0 auto;
 }
