--- a/views/layouts/layout1.hbs
+++ b/views/layouts/layout1.hbs
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
-  <title>Online Academy</title>
+  <title>{{lcTitle}}</title>
 </head>
 
 <body>
@@ -22,12 +22,12 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a href="#" id="menu"
               data-toggle="dropdown" class="nav-link"
-              >Field</a>
+              >Categories</a>
           <ul class="dropdown-menu">
             {{#each lcFields}}
               <li class="dropdown-submenu">
@@ -35,7 +35,7 @@
                   <ul class="dropdown-menu">
                     {{#each lcCategories}}
                       <li>
-                          <a class="dropdown-item" href="#">{{catName}}</a>
+                          <a class="dropdown-item" href="/course/category/{{catID}}">{{catName}}</a>
                       </li>
                     {{/each}}
                   </ul>
