--- a/views/vwUser/detail.hbs
+++ b/views/vwUser/detail.hbs
@@ -2,25 +2,94 @@
   <p class="card-header d-flex aPath">
     <a class="aPath" href="javascript:;">{{fieldName}}</a>
     <span>&nbsp;&nbsp;❯&nbsp;&nbsp;</span>
-    <a class="aPath" href="javascript:;">{{catName}}</a>
+    <a class="aPath" href="/course/category/{{course.catID}}">{{catName}}</a>
   </p>
 
   <div class="card-body course-card-body">
     <img class="course-img" src="https://drive.google.com/uc?export=view&id={{course.image}}">
-    <h1 class="card-title">{{course.title}}</h1>
-    <p class="card-text">{{course.tinydes}}</p>
-    <p class="card-text">
-        <span class="rating">{{course.rating}}</span>&nbsp;
-        {{#each course.star}}
-            <span class="fa fa-star {{#if this}}star-checked{{/if}}"></span>
-        {{/each}}
-        &nbsp;
-        <span class="course-rating-num">({{format_number course.rating_num}} ratings)</span>
-        &nbsp;
-        <span>{{format_number course.student_num}} students</span>
-    </p>
-    <p class="card-text">Instructor: <span class="course-instructor">{{course.instructor}}</span></p>
-    <p class="card-text">Last updated <span>{{course.update}}</span></p>
+    <div class="course-title">
+      <h1 class="card-title">{{course.courseName}}</h1>
+      <p class="card-text">{{course.tinydes}}</p>
+      <div class="course-title-info">
+        <p class="card-text">
+          <span class="rating">{{course.rating}}</span>&nbsp;
+          {{#each course.star}}
+              <span class="fa fa-star {{#if this}}star-checked{{/if}}"></span>
+          {{/each}}
+          &nbsp;
+          <span class="course-rating-num">({{format_number course.rating_num}} ratings)</span>
+          &nbsp;
+          <span>{{format_number course.student_num}} students</span>
+        </p>
+        <p class="card-text">Instructor: <span class="course-instructor">{{course.instructor}}</span></p>
+        <p class="card-text">Last updated <span>{{course.update}}</span></p>
+      </div>
+      <div class="course-title-price">
+        <div class="course-title-price-card">
+          <div class="price-box text-light text-center">
+            {{#if course.hasPromotion}}
+              <span class="price">₫{{format_number course.promotion}}</span><br>
+              <span class="old-price">₫{{format_number course.price}}</span><br>
+            {{else}}
+              <span class="price">₫{{format_number course.price}}</span><br>
+            {{/if}}
+          </div>
+          <div class="buy-now text-center" type="button">
+            <h5>Buy now</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-body">
+  <div class="main-des">
+    <h4>Description</h4>
+    <p class="card-text">{{course.maindes}}</p>
+  </div>
+</div>
+
+
+<div class="card-body">
+  <div class="course-content">
+    <h4>Course Content</h4>
+    <div class="mt-3">
+      <div class="list-group">
+          {{#each lecture}}
+              <a data-toggle="collapse" href="#{{newLectureID}}" class="list-group-item list-group-item-action font-weight-bold text-secondary bg-light" role="button" aria-expanded="false">
+                {{lecName}}
+              </a>
+              <div class="collapse" id="{{newLectureID}}">
+                <div class="card card-body">
+                  {{description}}
+                </div>
+              </div>
+          {{/each}}
+          
+      </div>
+  </div>
+  </div>
+</div>
+
+<div class="card-body">
+  <div class="main-des">
+    <h4>Students also bought</h4>
+    <p class="card-text">{{course.maindes}}</p>
+  </div>
+</div>
+
+<div class="card-body">
+  <div class="main-des">
+    <h4>Instructor</h4>
+    <p class="card-text">{{course.maindes}}</p>
+  </div>
+</div>
+
+<div class="card-body">
+  <div class="main-des">
+    <h4>Feedbacks</h4>
+    <p class="card-text">{{course.maindes}}</p>
   </div>
 </div>
 
