--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -216,3 +216,13 @@ body{
     width: 60%;
     margin: 0 auto;
 }
+
+.recommend {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.feedback {
+    width: 60%;
+    margin: 0 auto;
+}
