--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,32 @@
-/* dropdown-submenu {
-    position: relative;
-  }
-  
-  .dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -1px;
-  } */
+.search-container{
+    background: #fff;
+    height: 30px;
+    border-radius: 30px;
+    padding: 15px 15px 15px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.8s;
+    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
+}
+
+.search-container .search-input{
+    width: 400px;
+    background: transparent;
+    border: none;
+    outline:none;
+    font-weight: 500;
+    font-size: 16px;
+    transition: 0.8s;
+}
+
+.search-container .search-btn .fa{
+    color: #5cbdbb;
+}
 
 .dropdown-submenu {
     position: relative;
@@ -148,11 +168,11 @@ body{
 }
 
 .course-rating-num {
-    color: purple;
+    color: rgb(204, 35, 204);
     text-decoration: underline;
 }
 .course-instructor {
-    color: purple;
+    color: rgb(204, 35, 204);
     text-decoration: underline;
 }
 
@@ -165,7 +185,7 @@ body{
 
 .course-title {
     float: right;
-    width: 59%;
+    width: 55%;
 }
 
 .course-title-info {
@@ -179,7 +199,7 @@ body{
 }
 
 .price-box {
-    background-color: purple;
+    background-color: orange;
 	border:none;
 	border-radius: 10px;
 	width: 200px;
@@ -190,13 +210,13 @@ body{
 
 .buy-now {
     margin: 20px auto 10px;
-    border: 1px solid;
     width: 200px;
     padding: 10px;
+    background-color: white;
 }
 
 .buy-now:hover {
-    background-color:silver;
+    opacity: 0.8;
 }
 
 .course-title-price-card {
@@ -225,4 +245,21 @@ body{
 .feedback {
     width: 60%;
     margin: 0 auto;
+}
+
+.row {
+    margin: 0;
+}
+
+.feedback-card-header {
+
+}
+
+.feedback-card-author-avatar {
+    color: white;
+    background-color: black;
+    padding: 10px 15px;
+    border-radius: 100%;
+    font-size: 18px;
+    font-weight: bold;
 }
