--- a/views/layouts/layout1.hbs
+++ b/views/layouts/layout1.hbs
@@ -15,7 +15,9 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+      5Horses
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,7 +45,19 @@
             {{/each}}
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Contact</a>
+        </li>
       </ul>
+      <div class="search-container ml-3">
+        <input type="text" name="search" placeholder="Search..." class="search-input">
+        <a href="#" class="search-btn">
+          <i class="fa fa-search"></i>      
+        </a>
+      </div>
     </div>
   </nav>
 
