--- a/views/vwUser/detail.hbs
+++ b/views/vwUser/detail.hbs
@@ -5,9 +5,9 @@
     <a class="aPath" href="/course/category/{{course.catID}}">{{catName}}</a>
   </p>
 
-  <div class="card-body course-card-body">
-    <img class="course-img" src="https://drive.google.com/uc?export=view&id={{course.image}}">
-    <div class="course-title">
+  <div class="card-body course-card-body bg-dark">
+    <img class="course-img m-3 border-light" src="https://drive.google.com/uc?export=view&id={{course.image}}">
+    <div class="course-title text-light m-3">
       <h1 class="card-title">{{course.courseName}}</h1>
       <p class="card-text">{{course.tinydes}}</p>
       <div class="course-title-info">
@@ -26,7 +26,7 @@
       </div>
       <div class="course-title-price">
         <div class="course-title-price-card">
-          <div class="price-box text-light text-center">
+          <div class="price-box text-dark text-center">
             {{#if course.hasPromotion}}
               <span class="price">₫{{format_number course.promotion}}</span><br>
               <span class="old-price">₫{{format_number course.price}}</span><br>
@@ -34,7 +34,7 @@
               <span class="price">₫{{format_number course.price}}</span><br>
             {{/if}}
           </div>
-          <div class="buy-now text-center" type="button">
+          <div class="buy-now text-center text-dark" type="button">
             <h5>Buy now</h5>
           </div>
         </div>
@@ -91,14 +91,40 @@
 <div class="card-body">
   <div class="feedback">
     <h4>Feedbacks</h4>
+    <h5>
+      <i class="fa fa-star fa-lg star-checked"></i>
+      {{course.rating}} course rating
+      <i class="fa fa-circle"></i>
+      {{format_number course.rating_num}} ratings
+    </h5>
+    
+    <div class="row mt-3">
     {{#each feedback}}
-      <p class="card-text">
-        <span>Author: {{author}}</span><br>
-        <span>Title: {{title}}</span><br>
-        <span>Content: {{content}}</span><br>
-        <span>Date: {{date}}</span><br>
-      </p>
+      <div class="col-md-6 p-1">
+        <div class="border border-dark">
+          <div class="m-2">
+            <div class="feedback-card-header d-flex">
+              <div class="mt-2">
+                <span class="feedback-card-author-avatar">N</span>
+              </div>
+              <div class="ml-3" >
+                <span>{{author}}</span><br>
+                {{#each star}}
+                  <span class="fa fa-star {{#if this}}star-checked{{/if}}"></span>
+                {{/each}}
+                &nbsp;
+                <span>{{date}}</span>
+              </div>
+            </div>
+            <p class="card-text w-50">
+            <h5>{{title}}</h5>
+            <span class="mt-3">{{content}}</span><br>
+            </p>
+          </div>
+        </div>
+      </div>
     {{/each}}
+    </div>
   </div>
 </div>
 
