--- a/views/layouts/layout1.hbs
+++ b/views/layouts/layout1.hbs
@@ -23,10 +23,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item {{#if lcHomePage}}active{{/if}}">
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown {{#if lcCatPage}}active{{/if}}">
           <a href="#" id="menu"
               data-toggle="dropdown" class="nav-link"
               >Categories</a>
