--- a/views/vwTeacher/editCourse.hbs
+++ b/views/vwTeacher/editCourse.hbs
@@ -18,7 +18,7 @@
   <div>
     <div class="card">
     <h4 class="card-header">
-        Add course
+        Edit course
     </h4>
     {{#if this.empty}}
         <div class="card-body">
@@ -28,20 +28,20 @@
         <form style="margin-top: 2em; margin-left: 1em; margin-right: 1em;">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="inputCourseName">Course Name</label>
+      <label for="inputEmail4">Course Name</label>
       <input type="email" class="form-control" id="inputCourseName" placeholder="Course name">
     </div>
     <div class="form-group col-md-6">
-      <label for="inputLN">Lecturer Name</label>
+      <label for="inputAddress2">Lecturer Name</label>
     <input type="text" class="form-control" id="inputLN" placeholder="Lecturer name">
     </div>
   </div>
   <div class="form-group">
-      <label for="inputCourseIMG">Image</label>
-    <input type="text" class="form-control" id="inputCourseIMG" placeholder="img url here">
+      <label for="inputAddress2">Image</label>
+    <input type="text" class="form-control" id="inputIMG" placeholder="img url here">
     </div>
   <div class="form-group">
-    <label for="inputCourseDes">Description</label>
+    <label for="inputAddress2">Description</label>
   <div id="editor">
   <p><br></p>
   <p><br></p>
@@ -58,32 +58,32 @@
   });
 </script>
   <div class="form-group">
-    <label for="inputCourseSDes">Short Description</label>
-    <textarea type="text" class="form-control" id="inputCourseSDes" placeholder=""></textarea>
+    <label for="inputAddress2">Short Description</label>
+    <textarea type="text" class="form-control" id="inputShortDes" placeholder=""></textarea>
   </div>
   <div class="form-row">
     <div class="form-group col-md-3">
-      <label for="inputCoursePrice">Price per Student</label>
-      <input type="text" class="form-control" id="inputCoursePrice" placeholder="vnd">
+      <label for="inputCity">Price per Student</label>
+      <input type="text" class="form-control" id="inputPrice" placeholder="vnd">
     </div>
     <div class="form-group col-md-2">
-      <label for="inputCourseDis">Discount</label>
-      <input type="text" class="form-control" id="inputCourseDis" placeholder="">
+      <label for="inputCity">Discount</label>
+      <input type="text" class="form-control" id="inputPrice" placeholder="">
     </div>
     <div class="form-group col-md-1">
-      <label for="inputStuNum">Max student(s)</label>
-      <input type="text" class="form-control" id="inputStuNum" placeholder="">
+      <label for="inputCity">Max student(s)</label>
+      <input type="text" class="form-control" id="inputPrice" placeholder="">
     </div>
     <div class="form-group col-md-3">
-      <label for="inputCourseField">Field</label>
-      <select id="inputCourseField" class="form-control">
+      <label for="inputState">Field</label>
+      <select id="inputField" class="form-control">
         <option selected>Choose...</option>
         <option>...</option>
       </select>
     </div>
     <div class="form-group col-md-3 ">
-      <label for="inputCourseCat">Category</label>
-      <select id="inputCourseCat" class="form-control">
+      <label for="inputState">Category</label>
+      <select id="inputCat" class="form-control">
         <option selected>Choose...</option>
         <option>...</option>
       </select>
@@ -98,7 +98,7 @@
     </div>
   </div>
   <div class="form-group">
-  <button type="submit" class="btn btn-primary">Finnish</button>
+  <button type="submit" class="btn btn-primary">Finnish Editing</button>
   </div>
 </form>
     {{/if}}
