--- a/views/vwAdmin/vwField/edit.hbs
+++ b/views/vwAdmin/vwField/edit.hbs
@@ -18,6 +18,14 @@
         <i class="fa fa-backward" aria-hidden="true"></i>
         List
       </a>
+        <button type="submit" class="btn btn-danger" formaction="/fields/hide">
+            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+            Hide
+        </button>
+        <button type="submit" class="btn btn-danger" formaction="/fields/unhide">
+            <i class="fa fa-eye" aria-hidden="true"></i>
+            Unhide
+        </button>
       <button type="submit" class="btn btn-danger" formaction="/fields/del">
         <i class="fa fa-trash" aria-hidden="true"></i>
         Delete
